<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/package_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:srcCompat="@drawable/hotel1" />

        <TextView
            android:id="@+id/package_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/package_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/package_thumbnail"
            tools:text="@string/gangwon" />

        <RatingBar
            android:id="@+id/package_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            app:layout_constraintStart_toEndOf="@id/package_area"
            app:layout_constraintTop_toBottomOf="@+id/package_thumbnail" />

        <TextView
            android:id="@+id/package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="22sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/package_area"
            app:layout_constraintTop_toBottomOf="@+id/package_thumbnail"
            tools:text="@string/sample_package" />

        <TextView
            android:id="@+id/package_startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/package_area"
            app:layout_constraintTop_toBottomOf="@id/package_name"
            tools:text="@string/date_2023_12_24" />

        <TextView
            android:id="@+id/package_enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/package_startdate"
            app:layout_constraintStart_toEndOf="@id/package_startdate"
            tools:text="@string/date_2023_12_25" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>