<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/guide_detailed_image"
        android:layout_width="140dp"
        android:layout_height="100dp"

        android:scaleType="centerCrop"
        android:src="@drawable/ic_guide"
        app:civ_border_color="@color/primary"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/guide_detailed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/guide_name"
        android:height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/guide_detailed_image" />

    <Button
        android:id="@+id/button_editGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/accent_color"
        android:text="@string/modify"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_delGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_detailed_name" />

    <Button
        android:id="@+id/button_delGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/accent_color"
        android:text="@string/delete"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_editGuide"
        app:layout_constraintTop_toBottomOf="@+id/guide_detailed_name" />

</androidx.constraintlayout.widget.ConstraintLayout>