<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/lodging_detailed_image"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_plus"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lodging_detailed_nameTIL"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lodging_detailed_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lodging_detailed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lodging_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lodging_detailed_area"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/region"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/lodging_detailed_nameTIL">

        <AutoCompleteTextView
            android:id="@+id/drop_detailed_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lodging_detailed_rating"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/lodging_grade"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/lodging_detailed_area">

        <AutoCompleteTextView
            android:id="@+id/drop_detailed_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_editLodging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent_color"
        android:text="@string/modify"
        android:textColor="@color/primary_text"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/button_delLodging"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lodging_detailed_rating" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delLodging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent_color"
        android:textColor="@color/primary_text"
        android:text="@string/delete"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_editLodging"
        app:layout_constraintTop_toBottomOf="@id/lodging_detailed_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>