<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scheduleItem"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/expandable"
        android:layout_margin="@dimen/margin_schedule_top"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation"
        app:contentPadding="@dimen/common_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layouts"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scheduleLayoutTV"
                    android:text="@string/day_1"
                    android:textSize="@dimen/text_size_content"
                    android:textColor="@color/primary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/schedule_theme"
                    android:visibility="gone"
                    android:textSize="@dimen/text_size_content"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/margin_schedule_text"
                    android:textColor="@color/secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_addSchedule"
                    android:src="@drawable/ic_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:layout_marginEnd="@dimen/margin_plus_button"
                    android:layout_gravity="center" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/lodgingViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_radius"
                android:layout_marginHorizontal="@dimen/margin_cardview_horizontal"
                android:layout_marginVertical="@dimen/margin_cardview_vertical"
                app:cardElevation="@dimen/card_elevation"
                android:visibility="gone">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/lodging_image"
                        android:layout_width="@dimen/image_size_width"
                        android:layout_height="@dimen/image_size_height"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/hotel1" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/lodging_image"
                        app:layout_constraintStart_toEndOf="@+id/lodging_image"
                        app:layout_constraintTop_toTopOf="@+id/lodging_image">

                        <TextView
                            android:id="@+id/lodging_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/text_size_region"
                            android:textStyle="bold"
                            tools:text="@string/jeju" />

                        <TextView
                            android:id="@+id/lodging_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_content"
                            tools:text="@string/hotel_name" />

                        <RatingBar
                            android:id="@+id/lodging_rating"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_grade" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/description"
                android:visibility="gone"
                android:text="@string/lorem_ipsum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_content"
                android:textColor="@color/secondary_text">
            </TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>